@@ -3,6 +3,7 @@
   - add set_quiet to SPVM::Builder::Config
   - add clear_quiet to SPVM::Builder::Config
   - add exists_quiet to SPVM::Builder::Config
+  - add delete_std to SPVM::Builder::Config
 0.0420 2018-04-03
   - fix before relase bugs
 0.0419 2018-04-03
